--- a/ajax/libs/icheck-bootstrap/package.json
+++ b/ajax/libs/icheck-bootstrap/package.json
@@ -1,7 +1,7 @@
 {
   "name": "icheck-bootstrap",
   "description": "Pure css checkboxes and radio buttons for Twitter Bootstrap.",
-  "filename": "icheck-bootstrap.css",
+  "filename": "icheck-bootstrap.min.css",
   "homepage": "https://github.com/bantikyan/icheck-bootstrap#readme",
   "repository": {
     "type": "git",
@@ -21,10 +21,10 @@
   "npmName": "icheck-bootstrap",
   "npmFileMap": [
     {
-      "basePath": "/",
+      "basePath": "",
       "files": [
         "**/*"
       ]
     }
-  ],
+  ]
 }
